[project.scripts]
wanted_papers = "pebmed_fetch_cli.main:main"


[project]
name = "pebmed_fetch"
version = "0.1.0"
description = "Fetch research papers using PubMed API and export to CSV."
authors = [
    {name = "sathvik07",email = "guggarisathvik@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.3,<3.0.0", "pylint (>=3.3.4,<4.0.0)"]

packages = [{include = "pebmed_fetch_cli"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 

